# ACV_SS19

./: README.md  listener_classifier.py  picam-keras.py  test1.py  test_listener.py
Assignment_1/: calculate_key_data.sh  make_photo.sh  output.ours.html
Assignment_1/Photos_AppCV/: 001_obj2.key  004_obj0.key  005_obj2.key  006_obj2.key  007_obj0.key  007_obj1.key  009_obj1.key  010_obj2.key  016_obj1.key  017_obj0.key  017_obj2.key  018_obj0.key  018_obj1.key  019_obj0.key
Assignment_1/objects20/: list_db_ld.txt  list_gt.txt  list_queries.txt  script.linux.sh  tree_4_8.ours.out  tree_4_8.out  tree_db_4_8.out
Assignment_1_Vocabulary_Tree/Photos_AppCV/: 000_obj0.key  001_obj0.key  001_obj1.key  003_obj0.key  003_obj1.key  004_obj2.key  006_obj1.key  007_obj2.key  008_obj1.key  008_obj2.key  009_obj0.key  010_obj1.key  011_obj0.key  012_obj1.key  013_obj1.key  015_obj2.key  016_obj0.key
Assignment_1_Vocabulary_Tree/objects20/: list_db.txt  (+2 more)
Assignment_2_Deep_Learning/: Report.docx
Calibration_chess/: camera_calibration.cpp  chess7x10.pgm  imageList.xml  intrinsics_v1p1.yml  out_camera_data.xml
Camera_calibration/: CMakeLists.txt  default.xml  intrinsics_v1p1.yml
catdog/: classifier_from_little_data_script_1.py  testmodel.py
classify_on_pc/: .listener_classifier.py.swp
laptop_classifier/: find_corrupt.py  mod_mnist.py  not_laptop.py
not_laptop/: classify1.py  dogcat.py  i2array.py  images2numpyarray.py  train1.py
streaming_classifier/: Report.docx  classify.py  streamer.py  tcp_pickle_stream.py  train.py
test-table/: mnist_cnn.py  test-keras.py
(+64 files in other folders)
